fix: status effect wrap

--- a/src/components/GameWindow/BottomContent/Character.module.css
+++ b/src/components/GameWindow/BottomContent/Character.module.css
@@ -118,6 +118,7 @@
   opacity: 0;
   margin-top: -1.8rem;
   justify-content: center;
+  flex-wrap: wrap;
 } 
 
 .character:hover .container .statusEffects {
